--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <jettyVersion>9.4.0.M0</jettyVersion>
   </properties>
 
   <dependencies>
@@ -32,10 +33,11 @@
       <version>3.1.0</version>
       <scope>provided</scope>
     </dependency>
+
   </dependencies>
 
   <build>
-    <finalName>OAuthImplement</finalName>
+    <finalName>p01</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
@@ -67,22 +69,13 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
+
         <plugin>
-          <groupId>org.mortbay.jetty</groupId>
-          <artifactId>maven-jetty-plugin</artifactId>
-          <version>6.1.10</version>
-          <configuration>
-            <scanIntervalSeconds>10</scanIntervalSeconds>
-            <connectors>
-              <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-                <port>8080</port>
-                <maxIdleTime>60000</maxIdleTime>
-              </connector>
-            </connectors>
-            <stopKey>STOP</stopKey>
-            <stopPort>8005</stopPort>
-          </configuration>
+          <groupId>org.eclipse.jetty</groupId>
+          <artifactId>jetty-maven-plugin</artifactId>
+          <version>${jettyVersion}</version>
         </plugin>
+
       </plugins>
     </pluginManagement>
   </build>
