--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,4 +15,15 @@
     <servlet-name>home</servlet-name>
     <url-pattern>/home</url-pattern>
   </servlet-mapping>
+
+  <servlet>
+    <servlet-name>CodeBuilder</servlet-name>
+    <servlet-class>OAuthImplement.CodeBuilder</servlet-class>
+
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>CodeBuilder</servlet-name>
+    <url-pattern>/CodeBuilder</url-pattern>
+  </servlet-mapping>
 </web-app>
