--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,18 +1,31 @@
 <!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+    <display-name>Archetype Created Web Application</display-name>
 
-  <servlet>
-    <servlet-name>home</servlet-name>
-    <servlet-class>OAuthImplement.home</servlet-class>
+    <servlet>
+        <servlet-name>home</servlet-name>
+        <servlet-class>OAuthImplement.home</servlet-class>
 
-  </servlet>
+    </servlet>
 
-  <servlet-mapping>
-    <servlet-name>home</servlet-name>
-    <url-pattern>/home</url-pattern>
-  </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>home</servlet-name>
+        <url-pattern>/home</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>OAuthClient</servlet-name>
+        <servlet-class>OAuthImplement.OAuthClient</servlet-class>
+
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>OAuthClient</servlet-name>
+        <url-pattern>OAuthClient</url-pattern>
+    </servlet-mapping>
+
+
 </web-app>
