--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,14 +17,14 @@
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>CodeBuilder</servlet-name>
-        <servlet-class>OAuthImplement.CodeBuilder</servlet-class>
+        <servlet-name>AuthCodeURL</servlet-name>
+        <servlet-class>OAuthImplement.AuthCodeURL</servlet-class>
 
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>CodeBuilder</servlet-name>
-        <url-pattern>/CodeBuilder</url-pattern>
+        <servlet-name>AuthCodeURL</servlet-name>
+        <url-pattern>/AuthCodeURL</url-pattern>
     </servlet-mapping>
 
 
@@ -38,6 +38,17 @@
         <servlet-name>OAuthClient</servlet-name>
         <url-pattern>OAuthClient</url-pattern>
     </servlet-mapping>
+
+  <servlet>
+    <servlet-name>TokenCodeURL</servlet-name>
+    <servlet-class>OAuthImplement.TokenCodeURL</servlet-class>
+
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>TokenCodeURL</servlet-name>
+    <url-pattern>/TokenCodeURL</url-pattern>
+  </servlet-mapping>
 
 
 </web-app>
