--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -72,6 +72,7 @@
         <servlet-name>JSON</servlet-name>
         <url-pattern>/JSON</url-pattern>
     </servlet-mapping>
+
     <servlet>
         <servlet-name>UserInfo</servlet-name>
         <servlet-class>OAuthImplement.UserInfo</servlet-class>
@@ -83,6 +84,15 @@
         <url-pattern>/UserInfo</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>TokenVerifier</servlet-name>
+        <servlet-class>OAuthImplement.TokenVerifier</servlet-class>
 
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>TokenVerifier</servlet-name>
+        <url-pattern>/TokenVerifier</url-pattern>
+    </servlet-mapping>
 
 </web-app>
