--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -117,7 +117,7 @@
 
     <filter>
         <filter-name>ResourceFilter</filter-name>
-        <filter-class>OAuthImplement.ResourceFilter</filter-class>
+        <filter-class>OAuthImplement.Filters.ResourceFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>ResourceFilter</filter-name>
