--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -141,7 +141,8 @@
     <filter-mapping>
         <filter-name>ResourceFilter</filter-name>
         <url-pattern>/ProtectedResource</url-pattern>
-        <dispatcher>INCLUDE</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
 
 </web-app>
